crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@51.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ROW(1,2) in (ROW(3,4), ROW(1,2));"
---
SelectStmt@0..40
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..37
    AExpr@7..37
      RowExpr@7..14
        Row@7..10 "ROW"
        Ascii40@10..11 "("
        AConst@11..12
          Iconst@11..12 "1"
        Ascii44@12..13 ","
        AConst@13..14
          Iconst@13..14 "2"
      Ascii41@14..15 ")"
      Whitespace@15..16 " "
      InP@16..18 "in"
      Whitespace@18..19 " "
      Ascii40@19..20 "("
      List@20..37
        RowExpr@20..27
          Row@20..23 "ROW"
          Ascii40@23..24 "("
          AConst@24..25
            Iconst@24..25 "3"
          Ascii44@25..26 ","
          AConst@26..27
            Iconst@26..27 "4"
        Ascii41@27..28 ")"
        Ascii44@28..29 ","
        Whitespace@29..30 " "
        RowExpr@30..37
          Row@30..33 "ROW"
          Ascii40@33..34 "("
          AConst@34..35
            Iconst@34..35 "1"
          Ascii44@35..36 ","
          AConst@36..37
            Iconst@36..37 "2"
  Ascii41@37..38 ")"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

