crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@69.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select a,b from test_table where (a,b) > ('a','a') order by a,b;"
---
SelectStmt@0..64
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "a"
  Ascii44@8..9 ","
  ResTarget@9..10
    ColumnRef@9..10
      Ident@9..10 "b"
  Whitespace@10..11 " "
  From@11..15 "from"
  Whitespace@15..16 " "
  RangeVar@16..26
    Ident@16..26 "test_table"
  Whitespace@26..27 " "
  Where@27..32 "where"
  Whitespace@32..33 " "
  AExpr@33..49
    RowExpr@33..37
      Ascii40@33..34 "("
      ColumnRef@34..35
        Ident@34..35 "a"
      Ascii44@35..36 ","
      ColumnRef@36..37
        Ident@36..37 "b"
    Ascii41@37..38 ")"
    Whitespace@38..39 " "
    Ascii62@39..40 ">"
    Whitespace@40..41 " "
    RowExpr@41..49
      Ascii40@41..42 "("
      AConst@42..45
        Sconst@42..45 "'a'"
      Ascii44@45..46 ","
      AConst@46..49
        Sconst@46..49 "'a'"
  Ascii41@49..50 ")"
  Whitespace@50..51 " "
  SortBy@51..61
    Order@51..56 "order"
    Whitespace@56..57 " "
    By@57..59 "by"
    Whitespace@59..60 " "
    ColumnRef@60..61
      Ident@60..61 "a"
  Ascii44@61..62 ","
  SortBy@62..63
    ColumnRef@62..63
      Ident@62..63 "b"
  Ascii59@63..64 ";"

